# MultilayerNetworkModel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  runCluster.sh
doc/: Doxyfile  equation_modification.txt  notes.txt
doc/html/: CalculationNode_8hh_source.html  DownwardInfluenceImpl_8hh_source.html  DynamicalEquationGeneratorSimpleImpl_8hh_source.html  DynamicalEquation_8hh_source.html  GeneticAlgorithmController_8hh_source.html  GlobalVariables_8hh_source.html  IDownwardInfluence_8hh_source.html  IDynamicalEquationGenerator_8hh_source.html  IInitialConditionGenerator_8hh_source.html  IStructureGenerator_8hh_source.html  IUpwardInfluence_8hh_source.html  IVectorFieldReconfiguration_8hh_source.html  InitialConditionGeneratorImpl_8hh_source.html  Layer_8hh_source.html  MultilayerNetwork_8hh_source.html  NetworkModifier_8hh_source.html  NetworkPopulationElement_8hh_source.html  Network_8hh_source.html  Node_8hh_source.html  OdeWrapperAtState_8hh_source.html  OdeWrapper_8hh_source.html  StructureGeneratorImpl_8hh_source.html  UpwardInfluenceImpl_8hh_source.html  UtilityFunctions_8hh_source.html  VectorFieldPoint_8hh_source.html  VectorFieldReconfigurationImpl_8hh_source.html  VectorFieldSchemes_8hh_source.html  VectorField_8hh_source.html  allocators_8h_source.html  annotated.html  biginteger_8h_source.html  classAutoUTFInputStream-members.html  classAutoUTFInputStream.html  classAutoUTFOutputStream-members.html  classAutoUTFOutputStream.html  classBasicIStreamWrapper-members.html  classBasicIStreamWrapper.html  classBasicOStreamWrapper-members.html  classBasicOStreamWrapper.html  classCNAdd-members.html  (+460 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+47 more)
doc/latex/: annotated.tex  classAutoUTFInputStream.tex  classAutoUTFOutputStream.tex  classBasicIStreamWrapper.tex  classBasicOStreamWrapper.tex  classCNAdd.eps  classCNAdd.tex  classCNConstant.eps  classCNConstant.tex  classCNDivide.eps  classCNDivide.tex  classCNId.eps  classCNId.tex  classCNMultiply.eps  classCNMultiply.tex  classCNNegate.eps  classCNNegate.tex  classCNPower.eps  classCNPower.tex  classCNSubtract.eps  classCNSubtract.tex  classCalculationNode.eps  classCalculationNode.tex  classCrtAllocator.tex  classCursorStreamWrapper.eps  classCursorStreamWrapper.tex  classDownwardInfluenceImpl.eps  classDownwardInfluenceImpl.tex  classDynamicalEquation.tex  classDynamicalEquationGeneratorSimpleImpl.eps  classDynamicalEquationGeneratorSimpleImpl.tex  classEncodedInputStream.tex  classEncodedInputStream_3_01UTF8_3_4_00_01MemoryStream_01_4.tex  classEncodedOutputStream.tex  classEquationParser_1_1Interpreter.tex  classEquationParser_1_1Parser.tex  classEquationParser_1_1Scanner.eps  classEquationParser_1_1Scanner.tex  classEquationParser_1_1location.tex  classEquationParser_1_1position.tex  (+214 more)
include/: IDownwardInfluence.hh  IInitialConditionGenerator.hh  IStructureGenerator.hh  IUpwardInfluence.hh  InitialConditionGeneratorImpl.hh  Layer.hh  MultilayerNetwork.hh  Network.hh  Node.hh  StructureGeneratorImpl.hh
sources/generators/include/: IStructureGenerator.hh  InitialConditionGeneratorImpl.hh  NetworkDynamicsGenerators.hh
sources/generators/src/: DynamicalEquationGeneratorSimpleImpl.cc  InitialConditionGeneratorImpl.cc  NetworkDynamicsGenerators.cc  NetworkInitialConditionGenerators.cc  StructureGeneratorImpl.cc
sources/parser/include/: interpreter.h  parser.hpp  scanner.h
sources/parser/src/: interpreter.cpp  parser.cpp  parser.y  scanner.cpp  scanner.l
sources/projects/Analyzis/: AnalyzisMain.cc  analysisNotes.txt
sources/projects/BarabasiMultilayer/: GenerateBarabasiMain.cc  SimulateBarabasiMain.cc  barabasiGenerator.py  barabasi_0_0.json
sources/projects/HebbianProject/: simulateHebbian.cc
sources/projects/MainProject/: GenerateMain.cc  SimulateMain.cc
sources/projects/MpiCluster/: CMakeCache.txt  CMakeLists.txt  ClusterMain.cc  Makefile  cmake_install.cmake
sources/projects/MpiCluster/include/: GeneticAlgorithmServer.hh  MpiUtility.hh  MultilayerNetworkServer.hh  SerializedClasses.hh
sources/projects/MpiCluster/src/: GeneticAlgorithmServer.cc  MpiUtility.cc  MultilayerNetworkServer.cc  SerializedClasses.cc
sources/runners/: GenerateMain.cc  SimulateMain.cc
sources/test/: test_StructureGeneration.cc
sources/test/FunctionalityTest/: CMakeLists.txt  TestGeneticAlgorithm.cc
sources/test/UnitTest/: TestMain.cc  TestNetworkModifier.cc  TestStructureBuilding.cc  TestStructureGenerator.cc  TestUtility.cc  TestUtility.hh  TestVectorField.cc  TestVectorFieldPoint.cc  test_StructureGeneration.cc
src/: DynamicalEquation.cc  GenerateMain.cc  InitialConditionGeneratorImpl.cc  Layer.cc  Makefile  MultilayerNetwork.cc  Network.cc  Node.cc  SimulateMain.cc  StructureGeneratorImpl.cc  UpwardInfluenceImpl.cc  interpreter.h  main.cc  main.cpp  scanner.h  scanner.l  stack.hh  test_Network_addEdge.cc  test_StructureGeneration.cc
src/core/include/: CalculationNode.hh  DownwardInfluenceImpl.hh  DynamicalEquation.hh  GeneticAlgorithmController.hh  GlobalVariables.hh  IDownwardInfluence.hh  IUpwardInfluence.hh  IVectorFieldReconfiguration.hh  Layer.hh  MultilayerNetwork.hh  Network.hh  (+9 more)
src/runners/: GenerateMain.cc  SimulateMain.cc
src/test/: test_StructureGeneration.cc
valgrindOut/: cachegrind.out.10943  cachegrind.out.12082  cachegrind.out.12841  cachegrind.out.5622  cachegrind.out.5720  cachegrind.out.7297  callgrind.out.10964  callgrind.out.11532  callgrind.out.2865  callgrind.out.3263  callgrind.out.3639  callgrind.out.4211  callgrind.out.4507  callgrind.out.6178  callgrind.out.7678  callgrind.out.7841  callgrind.out.9951  diff
(+133 files in other folders)
